--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@
   --color-white: #ffffff;
   --accent-cornflover: #e7e9fc;
   --light-cloud: #f4f4fd;
+  --primary-button-hover: #404bbf;
+  --color-gray: #8e8f99;
   --card-set-gap: 24px;
 }
 
@@ -19,7 +21,7 @@ body {
   letter-spacing: 0.02em;
 }
 
-/* Utilities */
+/* ----------------Utilities----------------- */
 
 h1,
 h2,
@@ -68,11 +70,6 @@ img {
   padding-top: 0;
 }
 
-.card-discription {
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
 .card-set {
   display: flex;
   flex-wrap: wrap;
@@ -86,7 +83,7 @@ img {
   margin-top: var(--card-set-gap);
 }
 
-/* Button */
+/* --------------------Button------------------- */
 
 .button {
   color: var(--primary-text-color);
@@ -111,6 +108,11 @@ img {
   line-height: 1.18;
 }
 
+.button.primary:hover,
+.button.primary:focus {
+  background-color: var(--primary-button-hover);
+}
+
 .button.secondary {
   padding: 12px var(--card-set-gap);
   border: 1px solid var(--accent-cornflover);
@@ -129,7 +131,7 @@ img {
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-/* Header */
+/* ----------------Header--------------------- */
 
 .header-page {
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
@@ -153,7 +155,7 @@ img {
   color: var(--primary-brand);
 }
 
-/* Site nav */
+/* --------------------Site nav------------------- */
 
 .main-nav {
   display: flex;
@@ -202,9 +204,24 @@ img {
   color: var(--primary-brand);
 }
 
-/* Main */
+/* ---------------Main-------------------- */
 
-/* Hero */
+/* ---------------Hero------------------ */
+
+.overlay {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1440px;
+  height: 603px;
+  background-image: linear-gradient(
+      to right,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/people-office.jpg);
+  background-size: cover;
+  background-position: center;
+}
 
 .hero {
   text-align: center;
@@ -229,7 +246,7 @@ img {
   line-height: 1.07;
 }
 
-/* Section */
+/* ----------------Section--------------- */
 
 .section {
   padding-top: 120px;
@@ -256,13 +273,26 @@ img {
   line-height: 1.2;
 }
 
-/* What are we doing */
+/* -----------------Benefits--------------- */
+
+.benefits-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 8px;
+
+  background-color: var(--light-cloud);
+  max-width: 100%;
+  height: 112px;
+}
+
+/* --------------What are we doing---------------- */
 
 .work-item {
   flex-basis: calc(100% / 3 - var(--card-set-gap));
 }
 
-/* Our team */
+/* ---------------------Our team--------------------- */
 
 .team-background {
   background-color: var(--light-cloud);
@@ -275,15 +305,77 @@ img {
   background-color: var(--color-white);
 }
 
-.team-list .card-discription {
+.team-card-discription {
+  padding-top: 32px;
+  padding-bottom: 36px;
   text-align: center;
 }
 
-/* Footer */
+.team-text {
+  margin-bottom: 12px;
+}
+
+.socials {
+  display: flex;
+  justify-content: center;
+}
+
+.socials-list:not(:last-child) {
+  margin-right: var(--card-set-gap);
+}
+
+.social-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.team-socials-link {
+  background-color: var(--primary-brand);
+}
+
+/* -----------------Customers---------------- */
+
+.customers-list {
+  flex-basis: calc(100% / 6 - var(--card-set-gap));
+}
+
+.customers-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 88px;
+  border: 1px solid var(--color-gray);
+  border-radius: 4px;
+  color: var(--color-gray);
+}
+
+.customers-icon {
+  fill: currentColor;
+}
+
+.customers-list:hover .customers-link,
+.customers-list:focus .customers-link {
+  border: 1px solid var(--primary-brand);
+}
+
+.customers-list:hover .customers-icon,
+.customers-list:focus .customers-icon {
+  fill: var(--primary-brand);
+}
+
+/* ----------------Footer-------------------- */
 
 .footer {
   padding-top: 100px;
   padding-bottom: 100px;
+}
+
+.footer-container {
+  display: flex;
 }
 
 .footer.background {
@@ -305,14 +397,39 @@ img {
   width: 264px;
 }
 
-/* Portfolio */
+/* --------------Footer social media---------------- */
+
+.footer-logo {
+  margin-right: 120px;
+}
+
+.social-media {
+  display: block;
+  color: var(--color-white);
+  margin-bottom: 16px;
+}
+
+.footer-socials-list:not(:last-child) {
+  margin-right: 16px;
+}
+
+.footer-socials-link {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
+.footer-socials-link:hover,
+.footer-socials-link:focus {
+  background-color: #31d0aa;
+}
+
+/* ------------------Portfolio--------------------- */
 
 .portfolio-section {
   padding-top: 96px;
   padding-bottom: 120px;
 }
 
-/* Filters */
+/* -----------------------Filters------------------ */
 
 .filters {
   display: flex;
@@ -324,13 +441,15 @@ img {
   margin-right: var(--card-set-gap);
 }
 
-/* Portfolio cards */
+/* --------------------Portfolio cards-------------- */
 
 .portfolio-card {
   flex-basis: calc(100% / 3 - var(--card-set-gap));
 }
 
-.portfolio-card .card-discription {
+.card-discription {
+  padding-top: 32px;
+  padding-bottom: 32px;
   padding-left: 16px;
   padding-right: 16px;
 }
