--- a/css/styles.css
+++ b/css/styles.css
@@ -103,7 +103,8 @@ img {
 
   color: var(--color-white);
   background-color: var(--primary-brand);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 
   line-height: 1.18;
 }
@@ -111,6 +112,7 @@ img {
 .button.primary:hover,
 .button.primary:focus {
   background-color: var(--primary-button-hover);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .button.secondary {
@@ -212,7 +214,6 @@ img {
   margin-left: auto;
   margin-right: auto;
   max-width: 1440px;
-  height: 603px;
   background-image: linear-gradient(
       to right,
       rgba(46, 47, 66, 0.7),
@@ -227,10 +228,6 @@ img {
   text-align: center;
   padding-top: 192px;
   padding-bottom: 192px;
-}
-
-.hero.background {
-  background-color: var(--navy-blue);
 }
 
 .hero-title {
@@ -357,13 +354,13 @@ img {
   fill: currentColor;
 }
 
-.customers-list:hover .customers-link,
-.customers-list:focus .customers-link {
+.customers-link:hover,
+.customers-link:focus {
   border: 1px solid var(--primary-brand);
 }
 
-.customers-list:hover .customers-icon,
-.customers-list:focus .customers-icon {
+.customers-link:hover .customers-icon,
+.customers-link:focus .customers-icon {
   fill: var(--primary-brand);
 }
 
